# elboto-discord

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
elboto/: base.py  utils.py
elboto/cogs/: admin.py  extra.py  valorant.py
elboto/cogs/utils/: valorant_api.py
elboto/data/valorant/: ranks.json  update_data.sh
