[tool.poetry]
name = "elboto"
version = "0.0.1"
description = "Eloston's Discord bot"
authors = ["Eloston"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4"
"discord.py" = "*"
uvloop = "*"
discord-ext-typed-commands = "*"
"discord.py-stubs" = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
pytest = "*"
black = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
